Backing up in the middle of a fucking HUGE refactoring